[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["斎藤基樹 <stmtk13044032@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.65", features = ["serde-serialize"]}
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
